mudanças na linha de nomes do curso

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Vagrant</li>
         <li>Docker</li>
         <li>Ansible</li>
-        <li>Integração Contínua</li>
+        <li>Integração Contínua . aqui foram feitas mudanças no texto</li>
     </ul>
 </body>
 </html>
